DBU/burger-menu.css
#burger {
  display: none;
}

@media screen and (min-width: 980px) {
  .burger-container {
    display: none;
  }
}
@media screen and (max-width: 980px) {
  .burger-container ul {
    top: 5rem;
  }
  .burger-container select {
    border: 0px !important;
    padding: 0.5em 0.5em;
    text-align: center;
    background-color: var(--first-color);
    color: var(--select-color);
    border-radius: 0 !important;
    font-size: var(--txt-extra-small);
    font-weight: 600;
  }
  .burger-container a {
    color: var(--header-info);
    font-size: var(--txt-small);
    gap: 10px;
}

@media screen and (max-width: 640px) {
  .burger-container ul {
    top: 7rem;
  }
}

input + label {
  position: fixed;
  top: 20px;
  right: 20px;
  height: 20px;
  width: 20px;
  z-index: 5;
}

  .burger-container span {
    position: absolute;
    width: 100%;
    height: 2px;
    top: 50%;
    margin-top: -1px;
    left: 0;
    display: block;
    background: white;
    transition: 0.5s;
  }
  .burger-container span:first-child {
    top: 3px;
  }
  .burger-container span:last-child {
    top: 16px;
  }


label:hover {
  cursor: pointer;
}

input:checked + label span {
  opacity: 0;
  top: 50%;
}
input:checked + label span:first-child {
  opacity: 1;
  transform: rotate(45deg);
  transform-origin: 5% center;
}
input:checked + label span:last-child {
  opacity: 1;
  transform: rotate(-45deg);
  transform-origin: 5% center;
}

input:not(:checked) ~ ul {
  opacity: 0;
}

ul {
  background: var(--first-color);
  z-index: 3;
  transition: 0.5s;
  overflow: hidden;
  text-align: center;
  position: absolute;
  right: 0%;
  width: 100%;
}

input ~ ul li {
  list-style-type: none;
  transition: 0.5s;
  transition-delay: 0s;
  text-decoration: none;
  text-transform: uppercase;
  color: white;
  font-weight: 700;
  font-family: sans-serif;
  display: block;
  padding: 1rem;
}

input:checked ~ ul {
  transition-delay: 0s;
  padding: 1rem 1rem 0.5rem 1rem;
}

input:checked ~ ul li {
  transition-delay: 0.5s;
}

